# automobee

./: .env.example  .gitignore  README.md  analytics_service.py  app_factory.py  camera_config.py  camera_locations.json  collect_data.py  dashboard.py  database_service.py  download_models.py  feed_selector.py  las-vegas.html  logger_config.py  main.py  models.py  prepare_vmmr.py  pyproject.toml  rate_limiter.py  requirements.txt  setup_db.py  tailwind.config.js  train_classifier.py  vehicle_classifier.py  vehicle_detector.py  verify_models.py
alpha/: main.py  pyproject.toml  requirements-dev.txt  requirements.txt
alpha/docs/: PRD.md
alpha/scripts/: setup.py
alpha/tests/: conftest.py
app/: state_manager.py
config/: camera_locations.json
middleware/: error_handler.py  exceptions.py  recovery_handler.py  security.py
migrations/: 001_initial_schema.sql  002_rename_metadata.sql
nvroads.com/: Nevada Las Vegas Traffic _ Nevada 511.html
nvroads.com/Nevada Las Vegas Traffic _ Nevada 511_files/: 2240  2323  2430  2453  2483  GoogleMapComp  WeatherRadarAnimateHandler.min.js  ajaxCms  alerts  alerts(1)  bootstrap  bootstrap-multiselect(1)  bootstrap-multiselect(2)  common  css(2)  css2  helpPopup  introJsGuide  introjs(1)  isUserLoggedIn.js  jquery  jqueryval  js  js(1)  js(2)  js(3)  loadBlocker  loadBlocker.js  loadEventPolygon.min.js  loadEventPolyline.min.js  maincss  map  map(1)  map511  myCameraTooltip.min.js  myCctv  regionContentFilter  video-js  videojs  vt  (+40 more)
templates/: dashboard.html
tests/: test_color_classifier.py  test_vehicle_classifier.py
(+56 files in other folders)
